Add Trait and handle get user by id
