# src/public/swagger/swagger.yaml
@@ -184,7 +184,34 @@ paths:
             application/json:
               example:
                 $ref: '#/components/schemas/ApiResponse'
-
+  /authentication/user/{id}:
+      get:
+        tags:
+          - Authentication
+        summary: Get user by ID
+        operationId: getUserById
+        parameters:
+          - name: id
+            in: path
+            required: true
+            description: User ID
+            schema:
+              type: integer
+        responses:
+          '200':
+            description: User details
+            content:
+              application/json:
+                example:
+                  $ref: '#/components/schemas/ApiResponse'
+          '404':
+            description: User not found
+            content:
+              application/json:
+                example:
+                  $ref: '#/components/schemas/ApiResponse'
+        security:
+          - token: [ ]
   /authentication/logout:
     post:
       tags:
@@ -200,6 +227,7 @@ paths:
                 $ref: '#/components/schemas/ApiResponse'
       security:
         - token: [ ]
+  
 
   /user/register:
     post:
@@ -251,34 +279,9 @@ paths:
       security:
         - token: [ ]
 
-  /user/{id}:
-    get:
-      tags:
-        - User Management
-      summary: Get user by ID
-      operationId: getUserById
-      parameters:
-        - name: id
-          in: path
-          required: true
-          description: User ID
-          schema:
-            type: integer
-      responses:
-        '200':
-          description: User details
-          content:
-            application/json:
-              example:
-                $ref: '#/components/schemas/ApiResponse'
-        '404':
-          description: User not found
-          content:
-            application/json:
-              example:
-                $ref: '#/components/schemas/ApiResponse'
+    
 
-    put:
+    /users/put:
       tags:
         - User Management
       summary: Update user by ID
@@ -316,7 +319,7 @@ paths:
               example:
                 $ref: '#/components/schemas/ApiResponse'
 
-    delete:
+    /users/delete:
       tags:
         - User Management
       summary: Delete user by ID
